attribute added for small
attribute added for small

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,9 @@
 		font: inherit;
 		vertical-align: baseline;
 	}
+	
+	.small { font-size:75%; }
+
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
